# FlakedTuna

./: .clang-format  .cmake-format.yml  .cmake-linter.yml  .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: Codespell.yml  Docs.yml  Linux-Clang.yml  Linux-GCC.yml  MacOS-Clang.yml  MacOS-GCC.yml  Windows-MSVC.yml  Windows-MSYS2.yml  Windows-MinGW.yml  macOS.yml
cmake/: CreatePlugins.cmake  FlakedTunaConfig.cmake.in  PluginProto.cpp.in
examples/: Animal.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Example.cpp  FarmAnimals.cpp  FarmAnimals.hpp
include/: PlatformDefs.hpp  PluginHandler.hpp  PluginLoader.hpp  PluginRegistry.hpp
include/flakedthuna/: PluginLoader.hpp  PluginRegistry.hpp
src/: CMakeLists.txt  PlatformDefs.cpp  PlatformUNIX.cpp  PlatformWindows.cpp  PluginHandlerUNIX.cpp  PluginHandlerWindows.cpp  PluginLoader.cpp
